# Archive

./: README.md
Acelaso/: README.md  local.properties
Acelaso/app/: build.gradle
Acelaso/app/src/main/: AndroidManifest.xml
Acelaso/app/src/main/res/drawable/: style.xml
Acelaso/app/src/main/res/layout/: activity_alert_page.xml  activity_ble_gatt.xml  activity_csv_selector.xml  activity_dashboard.xml  activity_gsrplot.xml  activity_heart_plot.xml  activity_login.xml  activity_plot_page.xml  activity_temp_plot.xml  data_list.xml  graph_page.xml
Acelaso/app/src/main/res/menu/: menu_alert_page.xml  menu_csv_selector.xml  menu_dashboard.xml  menu_data_list.xml  menu_gsrplot.xml  menu_heart_plot.xml  menu_plot_page.xml  menu_temp_plot.xml
Acelaso/app/src/main/res/raw/: mydatafile.csv
Acelaso/app/src/main/res/values/: color.xml  dimens.xml  strings.xml
BLEApp/: local.properties
BLEApp/app/src/main/: AndroidManifest.xml
BLEApp/app/src/main/res/layout/: activity_ble_gatt.xml  activity_forgot_password.xml  activity_new_account_page.xml
BLEApp/app/src/main/res/menu/: menu_forgot_password.xml  menu_new_account_page.xml
BLEApp/app/src/main/res/values/: strings.xml
CSVReader/: README.md
CSVReader/app/: build.gradle  proguard-rules.pro
CSVReader/app/src/main/: AndroidManifest.xml
CSVReader/app/src/main/res/layout/: activity_main.xml  item_layout.xml
CSVReader/app/src/main/res/raw/: acelasodatafile.csv
Computer_Vision/: README.md
Computer_Vision/Circle Detection/: Readme.txt
Computer_Vision/Circle Detection/CircleDetection/src/: main.cpp  main.cpp~
Computer_Vision/Circle Detection/Detector/: Readme.txt
Computer_Vision/Image Creation and Kernel Operation/: Readme.txt
Computer_Vision/Image Creation and Kernel Operation/src/: main.cpp  main.cpp~  parttwo.cpp~
Computer_Vision/Variable Conductance Diffusion /: Readme.txt
Computer_Vision/Variable Conductance Diffusion /src/: main.cpp  main.cpp~
CppLocal/: .gitignore  README.md
CppLocal/CppRef/: CppRef.sln
CppLocal/CppRef/CppRef/: BST.cpp  BST.h  BalancedParanthesis.cpp  CppRef.vcxproj  CppRef.vcxproj.filters  Practise.cpp  Queue.cpp  Queue.h  Stackk.cpp  Stackk.h  helper.h  main.cpp  prac.h
DotsandBoxesGame/DotsAndBoxesGame/: .classpath  .project
DotsandBoxesGame/DotsAndBoxesGame/src/: AI.java  Director.java  GameBoard.java  GameFrame.java  GameOver.java  GameSplash.java  MusicPlayer.java  Player.java  Turnbase.java
DotsandBoxesGame/ScannerGUI/: ScannerGUI.sdf  ScannerGUI.sln
DotsandBoxesGame/ScannerGUI/Debug/: ScannerGUI.exe.metagen
DotsandBoxesGame/ScannerGUI/ScannerGUI/: AssemblyInfo.cpp  Form1.h  ReadMe.txt  ScannerGUI.cpp  ScannerGUI.vcxproj  ScannerGUI.vcxproj.filters  stdafx.cpp
DotsandBoxesGame/ScannerGUI/ScannerGUI/Debug/: CL.read.1.tlog  CL.write.1.tlog  ScannerGUI.lastbuildstate  ScannerGUI.pch  ScannerGUI.vcxproj.GenerateResource.Cache  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
EquationCalculator/: README.md  SolveEquation.sln
EquationCalculator/SolveEquation/: SolveEquation.vcxproj  SolveEquation.vcxproj.filters  StoreMapValue.cpp  StoreMapValue.h  helper.h  main.cpp
PCL_demos/: CMakeLists.txt  package.xml
PCL_demos/src/: pcl_downsampling.cpp  pcl_model_estimation.cpp  pcl_planar_segmentation.cpp  pcl_read.cpp  pcl_write.cpp  xyz2pcd.cpp~
TestApp/: Practise01.sln  TestApp.sln
TestApp/MedianArr/: BST.cpp  BST.h  Bubb_Sort.cpp  Bubb_Sort.h  DoublyLinked.cpp  LinkedLists.cpp  LinkedLists.h  MedianArr.vcxproj  MedianArr.vcxproj.filters  Palindrome.cpp  Palindrome.h  PracNImplement.cpp  PracNImplement.h  helper.h  main.cpp
TestApp/TestApp/: TestApp.cpp  TestApp.vcxproj  TestApp.vcxproj.filters  merger.cpp  merger.h  stdafx.h
ardrone_command_test/: README  package.xml
self-driving-car-udacity/: README.md
self-driving-car-udacity/CarND-LaneLines-P1/.ipynb_checkpoints/: P1-checkpoint.ipynb
tcp_communication/: README.md
tcp_communication/tcp_comms/: CMakeLists.txt  package.xml
tcp_communication/tcp_comms/include/tcp_comms/: tcp_comms.hh
tcp_communication/tcp_comms/launch/: active.launch  passive.launch
tcp_communication/tcp_comms/msg/: tcp.msg
tcp_communication/tcp_comms/src/: tcp_comms.cpp  tcp_comms_node.cpp  tcp_comms_test_node.cpp  tcp_test.cpp
workout-problem/: .project  README.md
workout-problem/auto_nav/: CMakeLists.txt  package.xml
workout-problem/auto_nav/include/auto_nav/: sensor_description.h
workout-problem/auto_nav/src/: sensor_description.cpp  sensor_node.cpp
workout-problem/workout_problem/: CMakeLists.txt  package.xml
(+25 files in other folders)
